# rublocks

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  deny.toml
.claude/: settings.json
.claude/hooks/: fetch-rebase-main.sh
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  release.yml
docs/: README.md  agents.md  architecture.md  cli.md  decisions.md  deploy.md  dev-mode.md  encoding.md  expressions.md  input.md  layouts.md  logging.md  manifest.md  migrations.md  models.md  openapi.md  routes.md  templates.md  testing.md  vision.md  workflow.md
docs/blocks/: README.md  csv.read.md  csv.write.md  db.find_many.md  db.find_one.md  db.insert.md  docx.render.md  error.md  guard.md  pdf.render.md  sftp.list.md  sftp.md  sftp.read.md  sftp.write.md  time.now.md  xlsx.read.md  xlsx.write.md
playground/: AGENTS.md  main.json
playground/.cursor/rules/: rublocks.mdc
playground/.rublocks/schemas/: input.schema.json  layout.schema.json  main.schema.json  model.schema.json  route.schema.json
playground/layouts/: main.json
playground/migrations/: .state.json  0001_init.sql
playground/models/: author.json  comment.json  post.json
playground/routes/: about.json  admin-author-create.json  admin-author-new.json  admin-post-create.json  admin-post-new.json  admin-preview.json  api-authors-list.json  api-authors-show.json  api-posts-list.json  api-posts-show.json  author-show.json  authors.json  comment-create.json  drafts.json  home.json  post-show.json
playground/templates/: about.html  authors.html  drafts.html  home.html  layout.html
playground/templates/admin/: author-new.html  post-new.html  preview.html
playground/templates/authors/: show.html
scripts/: install-hooks.sh  install.ps1.in  install.sh.in
src/: agents.rs  codegen.rs  codegen_input.rs  dev.rs  dev_error.rs  dev_services.rs  docker.rs  docs_tests.rs  expressions.rs  input.rs  language.rs  layouts.rs  main.rs  manifest.rs  migrations.rs  models.rs  routes.rs  schema.rs  schema_files.rs  sftp.rs  sql_where.rs  value_ref.rs  where_clause.rs
src/blocks/: csv_read.rs  csv_write.rs  db_find_many.rs  db_find_one.rs  db_insert.rs  docx_render.rs  docx_runtime.rs  error.rs  guard.rs  mod.rs  runtime.rs  sftp_list.rs  sftp_read.rs  sftp_write.rs  time_now.rs  xlsx_read.rs  xlsx_write.rs
src/snapshots/: rublocks__codegen__tests__snapshot_tests__emit_block_db_find_many.snap  rublocks__codegen__tests__snapshot_tests__emit_block_db_find_one.snap  rublocks__codegen__tests__snapshot_tests__emit_block_db_insert.snap  rublocks__codegen__tests__snapshot_tests__emit_block_docx_render.snap  rublocks__codegen__tests__snapshot_tests__emit_block_error.snap  rublocks__codegen__tests__snapshot_tests__emit_block_guard.snap  rublocks__codegen__tests__snapshot_tests__emit_block_pdf_render.snap  rublocks__codegen__tests__snapshot_tests__emit_block_sftp_list.snap  rublocks__codegen__tests__snapshot_tests__emit_block_sftp_read.snap  rublocks__codegen__tests__snapshot_tests__emit_block_sftp_write.snap  rublocks__codegen__tests__snapshot_tests__emit_block_time_now.snap  rublocks__codegen__tests__snapshot_tests__emit_cargo_toml_minimal.snap  rublocks__codegen__tests__snapshot_tests__emit_cargo_toml_with_postgres_and_migrations.snap  rublocks__codegen__tests__snapshot_tests__emit_layout_inheritance.snap  rublocks__codegen__tests__snapshot_tests__emit_minimal_manifest.snap  rublocks__codegen__tests__snapshot_tests__emit_model_struct.snap  rublocks__codegen__tests__snapshot_tests__emit_route_api_get.snap  rublocks__codegen__tests__snapshot_tests__emit_route_page_get.snap
(+14 files in other folders)
