[package]
name = "rublocks"
version = "0.0.1"
edition = "2024"
description = "Declarative JSON language compiling to Rust/Axum web applications, designed for code agents"
license = "MIT"
repository = "https://github.com/gghez/rublocks"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
indexmap = { version = "2", features = ["serde"] }
quote = "1"
proc-macro2 = "1"
syn = { version = "2", features = ["full", "parsing"] }
prettyplease = "0.2"
notify-debouncer-full = "0.5"
ctrlc = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net", "io-util", "time"] }
axum = "0.8"
futures-util = "0.3"

[dev-dependencies]
tempfile = "3"
