[package]
name = "rublocks"
version = "0.0.1"
edition = "2024"
description = "Declarative JSON language compiling to Rust/Axum web applications, designed for code agents"
license = "MIT"
repository = "https://github.com/gghez/rublocks"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
indexmap = { version = "2", features = ["serde"] }
schemars = { version = "0.8", features = ["indexmap2", "preserve_order"] }
quote = "1"
proc-macro2 = "1"
syn = { version = "2", features = ["full", "parsing"] }
prettyplease = "0.2"
notify-debouncer-full = "0.5"
ctrlc = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net", "io-util", "time"] }
axum = "0.8"
futures-util = "0.3"
cel = { version = "0.13", default-features = false }
regex = "1"
semver = "1"
glob = "0.3"
dotenvy = "0.15"
printpdf = { version = "0.9", default-features = false }
comrak = { version = "0.52", default-features = false }

[dev-dependencies]
tempfile = "3"
insta = "1"
pdf-extract = "0.10"
# The `docx.render` runtime conversion logic lives in
# `src/blocks/docx_runtime.rs` so it can be exercised by the round-trip
# tests without spinning up a dist project. The same file is embedded
# verbatim into the generated dist crate, so these crates ship there
# too — but only when a route references `docx.render`.
docx-rs = { version = "0.4", default-features = false }
pulldown-cmark = { version = "0.13", default-features = false, features = ["html"] }
html5ever = "0.39"
markup5ever_rcdom = "0.39"
bytes = "1"
